# triple-a

./: .flake8  .gitignore  29512038.json  CHANGELOG.md  CITATION-generate.cff  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  a.json  article.json  bc.ris  bulk.py  bulk2.py  bulk_export.py  bulk_export_biobank_field.py  data.json  docker-entrypoint.sh  error-parse_arxiv_list-{exc_tb.tb_lineno}.json  export  export_authors  export_keywords  export_topics  file.json  geeksforgeeks.gexf  llm_profile_template_biblio-analysis.json  main-getdata.py  main-requirement.py  main-requirement2.py  one-35130239.json  one-ForeName.json  one-abstract-dict-mode.json  one-article.json  one-cite.json  one-data.json  one-error-originalarticle.json  one-graphdict-all.json  one-graphdict-author.json  one-graphdict-author1.json  (+18 more)
.github/workflows/: build-package.yml  docker-build.yml  flake8.yml  push-docker-image.yml  pyinstaller.yml  pylint.yml  python-app.yml  python-flake.yml  test-poetry-action.yml  testing.yml
cookbook/: README.md  check_config.py  closeness_centrality.ipynb  cookbook.md  country.ipynb  sample-export-engine-advanced.py  sample-export-engine-simple.py  sample_calculate_llm_call.py  sample_complete_pipeline.py  sample_import_ris_file.py  sample_recall_llm.py  sample_reset_flag.py  sample_reset_llm_flag_with_fx.py  sample_reset_status.py  sample_update_response.py  sample_update_response_advance.py  sample_update_response_jsondecodererror.py
database/: Arxiv_test.json  BiblioAnalysis.json  articledata.json  articledataimport.json  ehr.json  tinydb_for_sampling.json
datasets/: jupyter.graphml
docs/: aff_to_loc.md  article.md  client-api.md  code-quality.md  graph-analysis.md  graph-visualization.md  knowledge-extraction.md  related-work.md  training-ner.md
docs/mongodb/: Query.md  README.md
docs/mongodb/query-playground/: get-article-by-pmid.mongodb.js  list-of-pmid.mongodb.js  state-report.mongodb.js
jupyter_lab/: betweenness_centrality.ipynb  case-biobank.ipynb  check_config.py  degree_distribution.csv  pipeline-sample.py  pipeline.ipynb  pipeline_llm_assessment.py  selection-sampling.ipynb  test.ipynb
jupyter_lab/database/: Arxiv_test.json
llm_template/: README.md  T102.json  ass11.json  ass12.json  cardio-biobank.json  extract-topic.json  ollama.json
tests/: test_db.py  test_main.py
tests/fixtures/: complete_graph.py  g52.graphml  graph_52.py
tests/fixtures/cite-file/: scholar.bib  scholar.enw  scholar.ris
tests/test_cli/: test_arepo.py  test_arepo2.py  test_export.py  test_export_graph.py  test_export_pretrain_llm.py
tests/test_client/: test_crossref_by_doi.py  test_extract_topic.py  test_get_altmetric.py  test_openalex_by_doi.py  test_semanticscholar_by_doi.py
triplea/: __init__.py  __version__.py  the_private_backyard.py  the_private_backyard1.py  the_private_backyard2.py  the_private_backyard3.py  the_private_backyard_mongodb.py
triplea/cli/: aaa.py  analysis.py  arepo.py  config.py  export.py  export_article.py  export_graph.py  export_pretrain_llm.py  go.py  import.py  import_bib.py  import_file.py  main.py  ner.py  next.py  pipeline.py  search.py  triplea.py  visualize.py
triplea/client/: affiliation_parser.py  affiliation_parser_multiple.py  scigenius.py  topic_extraction.py  triple_extraction.py
triplea/client/altmetric/: __init__.py
triplea/client/arxiv/: __init__.py
triplea/client/crossref/: __init__.py
triplea/client/openalex/: __init__.py
triplea/client/pubmed/: __init__.py
triplea/client/semanticscholar/: __init__.py
triplea/config/: settings.py
triplea/config/environment_variable/: .env.sample
triplea/db/: dal.py  database.py  mongo_nav.py  mongodb.py  tinydb.py
triplea/schemas/: __init__.py  article.py  node.py
triplea/service/: click_logger.py  convert_db.py  export.py  ganalysis.py  general.py  my_vir_test_test.py  ner.py  nlp_lab.py  persist.py  topic_extract.py
triplea/service/graph_extract/: __init__.py  topic.py
triplea/service/import/: __init__.py
triplea/service/llm/: __init__.py  __old__init__.py  calculate.py  config_template.py  init.py  llm_profile_template_sample.json  model_template_101.py  recycle.py
triplea/service/nlp/: location_extract.py  ner.py  ner_training.py  nlp_lab.py  test.py  test1.py  test2.py  test3.py  topic_extract.py  triple_extract.py
triplea/utils/: __init__.py  general.py
visualization/: gdatarefresh.py  index.html  web.py
visualization/alchemy/: charlize.json  data.json  index.html
visualization/interactivegraph/: index.html  one-gson.json
(+100 files in other folders)
