[tool.poetry]
name = "triplea"
version = "1.1.2"
description = "Article Analysis Assistant"
authors = ["EhsanBitaraf <bitaraf.e@iums.ac.ir>", "Maryam Jafarpour <maryam.jafarpoor@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/EhsanBitaraf/triple-a"
keywords = ["graph", "semantic-scholar", "citation-graph"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.10"
click = "*"
pydantic = "*"
pydantic-settings = "*"
pymongo = "*"
tinydb = "*"
langchain-openai = "*"
langchain = "*"
networkx = "*"
pandas = "*"
xmltodict = "*"
nxviz = "*"
netwulf = "*"
ipykernel = "*"
ipywidgets = "*"
pypdf2 = "*"
ratelimit = "*"
unstructured = "*"
tomli = "*"     
# ebhkit = { git = "https://github.com/EhsanBitaraf/hkit.git" }
ebhkit = "*"   

[tool.poetry.scripts]
aaa = "triplea.cli.aaa:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
