[tool.poetry]
name = "triplea"
version = "1.1.2"
description = "Article Analysis Assistant"
authors = ["EhsanBitaraf <bitaraf.e@iums.ac.ir>", "Maryam Jafarpour <maryam.jafarpoor@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/EhsanBitaraf/triple-a"
keywords = ["graph", "semantic-scholar", "citation-graph"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.10"
click = "*"
pydantic = "*"
pydantic-settings = "*"
pymongo = "*"
tinydb = "*"
networkx = "*"
pandas = "*"
tomli = "*"
ebhkit = "*"
xmltodict = "*"

langchain = { version = "*", optional = true }
langchain-openai = { version = "*", optional = true }
nxviz = { version = "*", optional = true }
netwulf = { version = "*", optional = true }
ipykernel = { version = "*", optional = true }
ipywidgets = { version = "*", optional = true }
pypdf = { version = ">=3.9.0", optional = true }
ratelimit = { version = "*", optional = true }
unstructured = { version = "*", optional = true }

[tool.poetry.extras]
llm = ["langchain", "langchain-openai"]
viz = ["nxviz", "netwulf"]
notebook = ["ipykernel", "ipywidgets"]
pdfconvert = ["pypdf", "unstructured"]
throttle = ["ratelimit"]
all = ["langchain", "langchain-openai", "nxviz", "netwulf", "ipykernel", "ipywidgets", "pypdf", "ratelimit", "unstructured"]

[tool.poetry.scripts]
aaa = "triplea.cli.aaa:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
